[gd_scene load_steps=2 format=3 uid="uid://c8lb8uqvt1i1g"]

[ext_resource type="Script" path="res://LoadScreenFade/fade_load_screen.gd" id="1_3b66p"]

[node name="FadeLoadScreen" type="Node2D"]
script = ExtResource("1_3b66p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="LoadScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FadeRect" type="ColorRect" parent="CanvasLayer/LoadScreen"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FinishedLabel" type="Label" parent="CanvasLayer/LoadScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = 38.5
offset_right = 105.5
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
text = "Press any key to continue..."
